--- a/content/25.md
+++ b/content/25.md
@@ -66,7 +66,7 @@ permalink: /25
 
 ##### Here's my favorite track from each record:
 
-<a href="" class="btn_secondary">Listen on Spotify ›</a>
+<a href="https://open.spotify.com/playlist/0nMSOh5lGXqii6XWfPCF8Q?si=67ff829f329d48c7" class="btn_secondary">Listen on Spotify ›</a>
 
 ---
 
@@ -126,7 +126,7 @@ permalink: /25
 
 ##### Here's my favorite track from each record:
 
-<a href="" class="btn_secondary">Listen on Spotify ›</a>
+<a href="https://open.spotify.com/playlist/7JX8juHaJHEeMxg9fuQT0J?si=22cb64b67249498c" class="btn_secondary">Listen on Spotify ›</a>
 
 ---
 
@@ -134,59 +134,59 @@ permalink: /25
 
 # 2019
 
-01.  [_Better Oblivion Community Center_](), Better Oblivion Community Center
+01.  [_Better Oblivion Community Center_](https://open.spotify.com/album/0uJIxkI8D0rR4shEIKeiDs?si=oJJ6eDTLSlCgQvv-6ZE6Dw), Better Oblivion Community Center
 
-02.  [_Phoenix_](), Pedro the Lion
+02.  [_Phoenix_](https://open.spotify.com/album/5u76A4Ereo3ABD3E7yXAge?si=ACHqjmAKRjevRZCmY_pPww), Pedro the Lion
 
-03.  [_I Love You. It's a Fever Dream._](), Tallest Man on Earth
+03.  [_I Love You. It's a Fever Dream._](https://open.spotify.com/album/21iUYmZgiaPv5xvfTYKqRs?si=CrDrrEclT2u19989w_QtLg), Tallest Man on Earth
 
-04.  [_Eraserland_](), Strand of Oaks
+04.  [_Eraserland_](https://open.spotify.com/album/41qnB1DK2yJABdRxV8pHPX?si=1BXIydkuR1Cy3P9vfMpVXQ), Strand of Oaks
 
-05.  [_Terms of Surrender_](), Hiss Golden Messenger
+05.  [_Terms of Surrender_](https://open.spotify.com/album/4eKRqA554vK2k4khe190Yu?si=7daK25hSQbqAoz7PxWqlUQ), Hiss Golden Messenger
 
-06.  [_i,i_](), Bon Iver
+06.  [_i,i_](https://open.spotify.com/album/0aldG5AoqOUDkEbsGtI9TW?si=KhXt_stuSR2W2OaTRacW-g), Bon Iver
 
-07.  [_Father of the Bride_](), Vampire Weekend
+07.  [_Father of the Bride_](https://open.spotify.com/album/5WWu3iYAXLgqghjU9696Nk?si=zn8IrTqZQJq6Sevzno6LFA), Vampire Weekend
 
-08.  [_I am Easy to Find_](), The National
+08.  [_I am Easy to Find_](https://open.spotify.com/album/5M5LPGsAR9mxbBa22GOp5h?si=DiTEaLwJTiq9EV1t0W5dlQ), The National
 
-09.  [_UFOF / Two Hands_](), Big Thief
+09.  [_UFOF_](https://open.spotify.com/album/0sLnNGW4PzCYFQ4Pn7aVCP?si=h0eK0mLVTAyDego_rjeJ-A) / [Two Hands_](https://open.spotify.com/album/5pp7px9MITK2MqeFVbRWGo?si=f57YamsjTOSaq2Y_cWqqGw), Big Thief
 
-10.  [_Lover_](), Noah Gunderson
+10.  [_Lover_](https://open.spotify.com/album/6hlXrXeAAxPOZ4y5lonxiQ?si=BZIvKwrcQ7iv3TZ2k1O0vA), Noah Gunderson
 
-11.  [_New Ways_](), Leif Vollebekk
+11.  [_New Ways_](https://open.spotify.com/album/20svKqJRQv9sxYZQ7JGdct?si=16V_oQhqSFWvTfQZR8_c9Q), Leif Vollebekk
 
-12.  [_Goes West_](), William Tyler
+12.  [_Goes West_](https://open.spotify.com/album/7vPbJA9o9NKBqjoI7StDmq?si=I5GxmtReQ3eQ03zRYu1Nxg), William Tyler
 
-13.  [_The Highwomen_](), The Highwomen
+13.  [_The Highwomen_](https://open.spotify.com/album/7sGTt1N5XMIQPCYHAnO1Pl?si=4g8K-607RmishfeEVDTwvg), The Highwomen
 
-14.  [_Wooh Dang_](), Daniel Norgren
+14.  [_Wooh Dang_](https://open.spotify.com/album/4baa3THO8wKLMrASaem2Ri?si=8N2HaHaDSh6LxCNj_aoLmQ), Daniel Norgren
 
-15.  [_III_](), The Lumineers
+15.  [_III_](https://open.spotify.com/album/0cGGGHvqwMD2J7bNz8TG3s?si=kBseAFGARw-29--9yvz-0g), The Lumineers
 
-16.  [_Secondhand Smoke_](), Sean McConnell
+16.  [_Secondhand Smoke_](https://open.spotify.com/album/70G1nUwFugH5eW2WuKWwvW?si=JzYMowVWQQOaSjdhygmigw), Sean McConnell
 
-17.  [_Jaime_](), Brittany Howard
+17.  [_Jaime_](https://open.spotify.com/album/3eMBjJtKjZrTi0N9mg6IcR?si=EpIXfuA9RWm_xbwl-TxN2w), Brittany Howard
 
-18.  [_Violet Street_](), Local Natives
+18.  [_Violet Street_](https://open.spotify.com/album/0ORZb7kyr8aaP2LpL3mhuY?si=TcZRquTGT6ulg89S_CTsMg), Local Natives
 
-19.  [_Look Up & Fly Away_](), Darlingside
+19.  [_Look Up & Fly Away_](https://open.spotify.com/album/2ADmKspwLRXnHsLGX4ChdF?si=H9DbbtNOTKKv4YWNR7px7A), Darlingside
 
-20.  [_Front Porch_](), Joy Williams
+20.  [_Front Porch_](https://open.spotify.com/album/0vK1POb7cjZdlZkShnqEDu?si=rcD0WYy4Sw6RTztLE9-bVQ), Joy Williams
 
-21.  [_As Far As I Can See_](), Phil Cook
+21.  [_As Far As I Can See_](https://open.spotify.com/album/27CCNjNvPkzNPIQBVqXhfb?si=O2TpcOtQT82rGshXp-ak9g), Phil Cook
 
-22.  [_Ode to Joy_](), Wilco
+22.  [_Ode to Joy_](https://open.spotify.com/album/0RR7qfOCOOHXbPAO1P3G5b?si=YiO5x96XSFqGhabOH0fWGw), Wilco
 
-23.  [_Silencia_](), Hammock
+23.  [_Silencia_](https://open.spotify.com/album/5g9CwdPva16mAs8ZBOexI4?si=PINlK0MOSCGBNG_PYO_3Cg), Hammock
 
-24.  [_American Football (LP3)_](), American Football
+24.  [_American Football (LP3)_](https://open.spotify.com/album/7ki5b310cwDVVJBevBLwdw?si=7SKpMvrXQGGlM2chhT-VSA), American Football
 
-25.  [_Good at Falling_](), The Japanese House
+25.  [_Good at Falling_](https://open.spotify.com/album/3Pa8W1UOD018R21VgOPTYZ?si=izsyGascTnm1Pz1pEJutvg), The Japanese House
 
 ##### Here's my favorite track from each record:
 
-<a href="" class="btn_secondary">Listen on Spotify ›</a>
+<a href="https://open.spotify.com/playlist/0RXcNXBp3KFNt9gjKIWZAR?si=77614538dd3b4ce0" class="btn_secondary">Listen on Spotify ›</a>
 
 ---
 
@@ -194,59 +194,59 @@ permalink: /25
 
 # 2018
 
-01.  [_By the Way, I Forgive You_](), Brandi Carlile
+01.  [_By the Way, I Forgive You_](https://open.spotify.com/album/2wDKBKgco7u3V1IWEK5V8l?si=z-vnCgnGQ_mtw2nr0my7yQ), Brandi Carlile
 
-02.  [_A Brief Inquiry Into Online Relationships_](), The 1975
+02.  [_A Brief Inquiry Into Online Relationships_](https://open.spotify.com/album/6PWXKiakqhI17mTYM4y6oY?si=As6QBdjuSLeeBr4aB76rag), The 1975
 
-03.  [_Hundred Acres_](), S. Carey
+03.  [_Hundred Acres_](https://open.spotify.com/album/4H1xbaXxVDmHnFQ5ifzyM4?si=9-9m4WEeSUGHtsDSsDPHUw), S. Carey
 
-04.  [_Evening Machines_](), Gregory Alan Isokov
+04.  [_Evening Machines_](https://open.spotify.com/album/5K7PZiOlAn8sxxhh0QTFuJ?si=Z9sbRN_0TBO_RQoF5ZduIA), Gregory Alan Isokov
 
-05.  [_boygenius_](), boygenius
+05.  [_boygenius_](https://open.spotify.com/album/6RjlLIuDFC8Dw91yRAdPz9?si=F5BVMHpkQ2i-KdiSqmqgyw), boygenius
 
-06.  [_C'est La Vie_](), Phosphorescent
+06.  [_C'est La Vie_](https://open.spotify.com/album/2oqDbd9Hmbp6RinQQmZNWd?si=KKKyDWIFRoCwRBen9MkUiA), Phosphorescent
 
-07.  [_Summertime Songs_](), Field Report
+07.  [_Summertime Songs_](https://open.spotify.com/album/7DrTiGGyz5KJcrMAox1KJc?si=zxD2wsjMQICXjHGZClrYYw), Field Report
 
-08.  [_Big Red Machine_](), Big Red Machine
+08.  [_Big Red Machine_](https://open.spotify.com/album/1c3dz3iboMl5gWpLfTi6D2?si=GOkcDGZVR0WysazcbxcskQ), Big Red Machine
 
-09.  [_Traversa_](), Geotic
+09.  [_Traversa_](https://open.spotify.com/album/151Uc6cBPzunQjh0Wcbl1O?si=n7K0DcaySmqowB1odWn3TA), Geotic
 
-10.  [_The Hex_](), Richard Swift
+10.  [_The Hex_](https://open.spotify.com/album/69OHkuXuh8djCi1LXdUCgr?si=bvEotZunRhu3bxjjkvSpaQ), Richard Swift
 
-11.  [_Caer_](), Twin Shadow
+11.  [_Caer_](https://open.spotify.com/album/5eIgu8uJ3H18h8vVqJYggZ?si=bhv-AnmER0mTISHju2jrSQ), Twin Shadow
 
-12.  [_To the Sunset_](), Amanda Shires
+12.  [_To the Sunset_](https://open.spotify.com/album/161jerzEynZ47m4SfxSVuW?si=OKBmAJL5S-OynKu9fA1DAw), Amanda Shires
 
-13.  [_Passwords_](), Dawes
+13.  [_Passwords_](https://open.spotify.com/album/1EPqf0Bfgbm2iMnne0WLVx?si=CVM1jtdKSou5HuDQ9Oe8hg), Dawes
 
-14.  [_Noonday Dream_](), Ben Howard
+14.  [_Noonday Dream_](https://open.spotify.com/album/6astw05cTiXEc2OvyByaPs?si=Qioxq9mPT4yTaUEw7SlkbA), Ben Howard
 
-15.  [_Malibu Nights_](), LANY
+15.  [_Malibu Nights_](https://open.spotify.com/album/6SWmGozzQDUaczHXMuE8Za?si=1n-dEEK_RGKwLFNjgbpe7A), LANY
 
-16.  [_DAYTONA_](), Pusha T
+16.  [_DAYTONA_](https://open.spotify.com/album/07bIdDDe3I3hhWpxU6tuBp?si=zrUJPk8ZTU6vedi6VojiLg), Pusha T
 
-17.  [_My New Moon_](), Amos Lee
+17.  [_My New Moon_](https://open.spotify.com/album/4CwmESdihxUhlYVwdYCyps?si=7Ze7JkD5RXKl_CmGB0FHJw), Amos Lee
 
-18.  [_HOME_](), John Butler Trio
+18.  [_HOME_](https://open.spotify.com/album/2Us1umIiun3JDxXldB08s6?si=Q7tbwJbwROiNBXJDY3tSrg), John Butler Trio
 
-19.  [_Honey_](), Robyn
+19.  [_Honey_](https://open.spotify.com/album/6WZjFvrzwq8SOGe0r8R3qk?si=z2nnN_jpRVuUEu2CwTr5Sg), Robyn
 
-20.  [_Golden Hour_](), Kacey Musgraves
+20.  [_Golden Hour_](https://open.spotify.com/album/7f6xPqyaolTiziKf5R5Z0c?si=1U7HDNM-TUKWr7sMe4wmDw), Kacey Musgraves
 
-21.  [_WARM_](), Jeff Tweedy
+21.  [_WARM_](https://open.spotify.com/album/2XTPulCL6EUx1thyJPnlmj?si=h0SX9d8pS9mfLITZcnDuOg), Jeff Tweedy
 
-22.  [_Kindness, A Rebel_](), River Whyless
+22.  [_Kindness, A Rebel_](https://open.spotify.com/album/71phqXMIHQNz7qLUWMl7Sy?si=2ied-P-KRZ21Oyoeo9m4OQ), River Whyless
 
-23.  [_DROGAS WAVE_](), Lupe Fiasco
+23.  [_DROGAS WAVE_](https://open.spotify.com/album/2liBYuCYfW37CmNkub2BaH?si=B6sJ6BmOSHSAudlmqCxYYA), Lupe Fiasco
 
-24.  [_Birthplace_](), Novo Amor
+24.  [_Birthplace_](https://open.spotify.com/album/0tWckYjFI6ioZptLr42J3p?si=TCdCYY-vRyqubVOu1JVUKA), Novo Amor
 
-25.  [_Singularity_](), Jon Hopkins
+25.  [_Singularity_](https://open.spotify.com/album/1nvzBC1M3dlCMIxfUCBhlO?si=Q7Z2QQIrQ1-B3moRV0veuQ), Jon Hopkins
 
 ##### Here's my favorite track from each record:
 
-<a href="" class="btn_secondary">Listen on Spotify ›</a>
+<a href="https://open.spotify.com/playlist/5oOLmD3CsvR4XZFudO53SA?si=f143b89f1b324849" class="btn_secondary">Listen on Spotify ›</a>
 
 ---
 
@@ -254,56 +254,56 @@ permalink: /25
 
 # 2017
 
-01.  [_Hallelujah Anyhow_](), Hiss Golden Messenger
+01.  [_Hallelujah Anyhow_](https://open.spotify.com/album/3TTT3ucRa58gBBK06JDq4K?si=z_8K9njaTLO3197eubEAKw), Hiss Golden Messenger
 
-02.  [_A Deeper Understanding_](), The War on Drugs
+02.  [_A Deeper Understanding_](https://open.spotify.com/album/4TkmrrpjlPoCPpGyDN3rkF?si=Bpucc_KkTLiUETdNsusVdQ), The War on Drugs
 
-03.  [_DAMN._](), Kendrick Lamar
+03.  [_DAMN._](https://open.spotify.com/album/4eLPsYPBmXABThSJ821sqY?si=js1xShzuRqST-CqynsngMg), Kendrick Lamar
 
-04.  [_Something to Tell You_](), HAIM
+04.  [_Something to Tell You_](https://open.spotify.com/album/5m9rXTBF7mHFGQlFsiEHrY?si=KwL271jgQeCE9Idq6tSSPg), HAIM
 
-05.  [_Stranger in the Alps_](), Phoebe Bridgers
+05.  [_Stranger in the Alps_](https://open.spotify.com/album/0qWcLfCZ8wtcoOdX14oGNI?si=QMsUg2ekTcGbpJmRTUqxqg), Phoebe Bridgers
 
-06.  [_The Nashville Sound_](), Jason Isbell & the 400 Unit
+06.  [_The Nashville Sound_](https://open.spotify.com/album/0gYLr4tpPpRrPg2WIS64jw?si=-kACfSDTR6GuPvoVG6vptQ), Jason Isbell & the 400 Unit
 
-07.  [_Twin Solitude_](), Leif Vollebekk
+07.  [_Twin Solitude_](https://open.spotify.com/album/64Yh7XkMmHan0qMmmYTcZj?si=UpfSoyUOQsm8qFXHsPKomw), Leif Vollebekk
 
-08.  [_Just for Us_](), Francis and the Lights
+08.  [_Just for Us_](https://open.spotify.com/album/6qQXg2HhcISQpBK7HOEPal?si=2Z1sbfMlTvCPCgG7-OLKJA), Francis and the Lights
 
-09.  [_Prisoner_](), Ryan Adams
+09.  [_Prisoner_](https://open.spotify.com/album/4jldY4eFDSoZua0KBCp6KH?si=NRrbwWE2TuC4tMdxpM31bg), Ryan Adams
 
-10.  [_We’re Not Going Anywhere_](), David Ramirez
+10.  [_We’re Not Going Anywhere_](https://open.spotify.com/album/5AD56UVYW8aNiGgwAkPp2h?si=mqOWf1kqSLuCxx4girMsBA), David Ramirez
 
-11.  [_ Up_](), Fleet Foxes
+11.  [_Crack Up_](https://open.spotify.com/album/0xtTojp4zfartyGtbFKN3v?si=4M6uZrTyTAi-YjXhK6_hgA), Fleet Foxes
 
-12.  [_Afterglow_](), Ásgeir
+12.  [_Afterglow_](https://open.spotify.com/album/2F06mm7Fso0C6LTcegiCWS?si=UVx-Fq0XQh2XBPsx952Dag), Ásgeir
 
-13.  [_Wonderful, Wonderful_](), The Killers
+13.  [_Wonderful, Wonderful_](https://open.spotify.com/album/5TMnKX3SaYXgYsmFuH8mxB?si=pIMUx2_URf2IeAfP2qEpHQ), The Killers
 
-14.  [_Near the Wild Heart of Life_](), Japandroids
+14.  [_Near the Wild Heart of Life_](https://open.spotify.com/album/26hqnB0XF1ZFc31zY6NAgf?si=mOfp0fUhSRm5jhj3WB0x2A), Japandroids
 
-15.  [_Turn Out the Lights_](), Julien Baker
+15.  [_Turn Out the Lights_](https://open.spotify.com/album/3AV0YFhIzY0LDeaJPU5x3O?si=YQ5W9-otQBOEFJYi4wDV-w), Julien Baker
 
-16.  [_Sleep Well Beast_](), The National
+16.  [_Sleep Well Beast_](https://open.spotify.com/album/2lsM7Py65EOtlq8BgwkXCS?si=TCX-0uXqS8WhxLWCu1g6-g), The National
 
-17.  [_Colors_](), Beck
+17.  [_Colors_](https://open.spotify.com/album/6BOQkxcHspMoRWEwEexf4l?si=BaS_JnrLT4SjU38A4wAS7g), Beck
 
-18.  [_Beast Epic_](), Iron & Wine
+18.  [_Beast Epic_](https://open.spotify.com/album/33zayrSBdboyCyGTjtQrsw?si=uTHWJBmCTRK5K9YOqF3PMA), Iron & Wine
 
-19.  [_Hard Love_](), Strand of Oaks
+19.  [_Hard Love_](https://open.spotify.com/album/0aktJX94s98TalMmzYNPNg?si=5CMU1bW3SNmcydqguKnP3Q), Strand of Oaks
 
-20.  [_Half-Light_](), Rostam
+20.  [_Half-Light_](https://open.spotify.com/album/2eVtqdI1qU02LHrPH72Omq?si=GkYGs7sZQDuXAhfBKSB1JA), Rostam
 
-21.  [_Romaplasm_](), Baths
+21.  [_Romaplasm_](https://open.spotify.com/album/0qICBcSjyduXz64uotDT6M?si=gooAq_WcQB--V1JfDfI83w), Baths
 
-22.  [_Pleasure_](), Feist
+22.  [_Pleasure_](https://open.spotify.com/album/5lXgrzp3xcFdYCQXtsS6dG?si=tQ19IN2HTEGcNu4F81EcOQ), Feist
 
-23.  [_Hug of Thunder_](), Broken Social Scene
+23.  [_Hug of Thunder_](https://open.spotify.com/album/6oPAq3tPMGIvlpjoscQP4g?si=GP_A91r3S6eY6AcEwnd1vw), Broken Social Scene
 
-24.  [_Whiteout Conditions_](), The New Pornographers
+24.  [_Whiteout Conditions_](https://open.spotify.com/album/7gSLfnSUAxJRMXhWsz9MYS?si=a8ixzBGVSv2ctFp-msVTMg), The New Pornographers
 
-25.  [_The Thrill of it All_](), Sam Smith
+25.  [_The Thrill of it All_](https://open.spotify.com/album/3XftSbguntyRTBQaGItmfK?si=AcdhiKnJTfSkBw45IaiIJA), Sam Smith
 
 ##### Here's my favorite track from each record:
 
-<a href="" class="btn_secondary">Listen on Spotify ›</a>
+<a href="https://open.spotify.com/playlist/18VHKcDWkoilEHuB9tYZ7z?si=d83d9ad70e194b0b" class="btn_secondary">Listen on Spotify ›</a>
