--- a/content/25.md
+++ b/content/25.md
@@ -6,7 +6,7 @@ permalink: /25
 
 # My Top Twenty-Five Records
 
-## An annual list of my top twenty-five records that came out that year
+## An annual list of my favorite records that came out that year
 
 ---
 
@@ -307,3 +307,8 @@ permalink: /25
 ##### Here's my favorite track from each record:
 
 <a href="https://open.spotify.com/playlist/18VHKcDWkoilEHuB9tYZ7z?si=d83d9ad70e194b0b" class="btn_secondary">Listen on Spotify ›</a>
+
+---
+
+Happy Listening,  
+Jeremy D. Cherry
