--- a/content/25.md
+++ b/content/25.md
@@ -6,13 +6,13 @@ permalink: /25
 
 # My Top Twenty-Five Records
 
-## An annual list of my favorite records that came out that year
+### An annual list of my favorite records that came out that year
 
 ---
 
 <!-- 2021 -->
 
-# 2021
+## 2021
 
 1. [_Pressure Machine_](https://open.spotify.com/album/1qMFjBarjO2xD15BwXZguD?si=y6-4BU5WTiuwN2kapqy7Q"), The Killers
 
@@ -72,7 +72,7 @@ permalink: /25
 
 <!-- 2020 -->
 
-# 2020
+## 2020
 
 1. [_Half Moon Light_](https://open.spotify.com/album/6jqJNgfl234UYEWeP3iRF1?si=f8KkpOk4St-NioOZ1Jn69g"), The Lone Bellow
 
@@ -132,7 +132,7 @@ permalink: /25
 
 <!-- 2019 -->
 
-# 2019
+## 2019
 
 01.  [_Better Oblivion Community Center_](https://open.spotify.com/album/0uJIxkI8D0rR4shEIKeiDs?si=oJJ6eDTLSlCgQvv-6ZE6Dw), Better Oblivion Community Center
 
@@ -192,7 +192,7 @@ permalink: /25
 
 <!-- 2018 -->
 
-# 2018
+## 2018
 
 01.  [_By the Way, I Forgive You_](https://open.spotify.com/album/2wDKBKgco7u3V1IWEK5V8l?si=z-vnCgnGQ_mtw2nr0my7yQ), Brandi Carlile
 
@@ -252,7 +252,7 @@ permalink: /25
 
 <!-- 2017 -->
 
-# 2017
+## 2017
 
 01.  [_Hallelujah Anyhow_](https://open.spotify.com/album/3TTT3ucRa58gBBK06JDq4K?si=z_8K9njaTLO3197eubEAKw), Hiss Golden Messenger
 
