--- a/content/25.md
+++ b/content/25.md
@@ -150,7 +150,7 @@ permalink: /25
 
 08.  [_I am Easy to Find_](https://open.spotify.com/album/5M5LPGsAR9mxbBa22GOp5h?si=DiTEaLwJTiq9EV1t0W5dlQ), The National
 
-09.  [_UFOF_](https://open.spotify.com/album/0sLnNGW4PzCYFQ4Pn7aVCP?si=h0eK0mLVTAyDego_rjeJ-A) / [Two Hands_](https://open.spotify.com/album/5pp7px9MITK2MqeFVbRWGo?si=f57YamsjTOSaq2Y_cWqqGw), Big Thief
+09.  [_UFOF_](https://open.spotify.com/album/0sLnNGW4PzCYFQ4Pn7aVCP?si=h0eK0mLVTAyDego_rjeJ-A) / [_Two Hands_](https://open.spotify.com/album/5pp7px9MITK2MqeFVbRWGo?si=f57YamsjTOSaq2Y_cWqqGw), Big Thief
 
 10.  [_Lover_](https://open.spotify.com/album/6hlXrXeAAxPOZ4y5lonxiQ?si=BZIvKwrcQ7iv3TZ2k1O0vA), Noah Gunderson
 
