--- a/content/25.md
+++ b/content/25.md
@@ -6,7 +6,7 @@ permalink: /25
 
 # My Top Twenty-Five Records
 
-### An annual list of my favorite records that came out that year
+### An annual list of my favorite releases
 
 ---
 
