--- a/content/25.md
+++ b/content/25.md
@@ -10,6 +10,66 @@ permalink: /25
 
 ---
 
+<!-- 2022 -->
+
+## 2022
+
+1. [_Being Funny In A Foreign Language_](https://open.spotify.com/album/6dVCpQ7oGJD1oYs2fv1t5M?si=PwJLk9ABSqirML5TVPWdEQ), The 1975
+
+2. [_Anaïs Mitchell_](https://open.spotify.com/album/1ZpLitOlsiSKy0Sdmhudi6?si=ruTcARl3S9KwhrlO1sP8eA), Anaïs Mitchell
+
+3. [_Rolling Golden Holy_](https://open.spotify.com/album/43mr98g3RoWlC3jyxAKf5I?si=y1WGpc8NTBu-y2g1g1uP4A), Bonnie Light Horseman
+
+4. [_Mr. Morale & The Big Steppers_](https://open.spotify.com/album/79ONNoS4M9tfIA1mYLBYVX?si=3uyG82dyQRO6faCnm2YPxQ), Kendrick Lamar
+
+5. [_Dragon New Warm Mountain I Believe In You_](https://open.spotify.com/album/7Ln81p86r5cCsesd3KBWIY?si=69c9yqwMTwKpgxFR-cmjqw), Big Thief
+
+6. [_WE_](https://open.spotify.com/album/2sAePf08xIp4tnDlMUCV8B?si=SsWcekxxSEqJ8ur9k7InnQ), Arcade Fire
+
+7. [_Break Me Open_](https://open.spotify.com/album/3GnC2xEY4b6wowL2eBIwGc?si=nmi7ebI8ThucDvAOQcbe1w), S. Carey
+
+8. [_11:11_](https://open.spotify.com/album/6sOmBkyGWJpzR04C7U7BZE?si=2H2B5t_fSzCeFPvvmfdYRA), Pinegrove
+
+9. [_Blue Rev_](https://open.spotify.com/album/1dShPPoxXfzbjFO1jIHJZz?si=ytOJY6CvQLCIDnBe2U4kzw), Alvvays
+
+10. [_PAINLESS_](https://open.spotify.com/album/2IVL0vnFIe9uHWW1TAocC7?si=ShMC-nxfR7-M2dDRGkYBKA), Nilufer Yanya
+
+11. [_I Walked With You A Ways_](https://open.spotify.com/album/7mdK7vYHrLMzPHGeGXQN0h?si=rEfo7TVsQjeDm9_cZbTOTQ), Plains
+
+12. [_(self-titled)_](https://open.spotify.com/album/1vTQ7l9DHERJJYPMsKGpxE?si=BOMflCxmSOq3QAVBW03_LQ), Marcus Mumford
+
+13. [_BRIGHTSIDE_](https://open.spotify.com/album/3K8XmeN3jQvl6reRJcfakL?si=d6DLKM-0SrWZdvzTjOnMPg), The Lumineers
+
+14. [_LOUIE_](https://open.spotify.com/album/3SKVtzmihlnGFylW5nC5kj?si=GqVFZar2Qyue-I1sdnQH6Q), Kenny Beats
+
+15. [_Alpha Zulu_](https://open.spotify.com/album/1jEwa4YdGR6FvKxWgRbJcv?si=zo77wtCgTeSgPsxur-rX0Q), Phoenix
+
+16. [_Surrender_](https://open.spotify.com/album/2VeOtQQAJxR8VyvmoXqIbI?si=v4iN64ViTMaANTuveJwIJg), Maggie Rogers
+
+17. [_Things Are Great_](https://open.spotify.com/album/3hWOJ8Xj5yVqcHWtjkMQ3q?si=gXcSKCu6Tn-iwOFfuWOorA), Band of Horses
+
+18. [_Havasu_](https://open.spotify.com/album/3VMJgXHIvNbMWJHIWUVbMK?si=Ic6tVkq6SdCK3cRclnIpNw), Pedro the Lion
+
+19. [_Life on Earth_](https://open.spotify.com/album/5oHaiGt9cgATxsrv409jP3?si=GpNmIY0FRmiuheEyeSdKCw), Hurray for the Riff Raff
+
+20. [_Cheat Codes_](https://open.spotify.com/album/0rEbmIQjHTKzKraH4UqiDy?si=viEEY_tWQ-WE1DzZIh1Rtg), Danger Mouse & Black Thought
+
+21. [_A Light for Attracting Attention_](https://open.spotify.com/album/009EjjwUjtdjvH7UP0wHzi?si=2tRH6FuwSb-YuPoTZi3vTQ), The Smile
+
+22. [_ILYSM_](https://open.spotify.com/album/34tf3KVea0r8Ee5jUE6HH9?si=32PS4JTXS5ORWXM-X_3g8A), Wild Pink
+
+23. [_Lighten Up_](https://open.spotify.com/album/5MT2lgCDRZ1AfHrQ3pklHI?si=wF-Pd3qVQnO7NpDGg7Mbug), Erin Rae
+
+24. [_Sometimes, Forever,_](https://open.spotify.com/album/3VXLdJpzeaAyX9Tbm0i0zn?si=aj3EItR3QEuIksVMdUCPsQ) Soccer Mommy
+
+25. [_Gemini Rights_](https://open.spotify.com/album/3Ks0eeH0GWpY4AU20D5HPD?si=350x4Q2aQd6gfxdlRI7ssA), Steve Lacy
+
+##### Here's my favorite track from each record:
+
+<a href="https://open.spotify.com/playlist/3TZooCIwFfuTahSD91BhYs?si=943bd1953d524d03" class="btn_secondary">Listen on Spotify ›</a>
+
+---
+
 <!-- 2021 -->
 
 ## 2021
