--- a/content/25.md
+++ b/content/25.md
@@ -1,13 +1,8 @@
 ---
-layout: default
-title: Jeremy D. Cherry
+layout: secondary
+title: My Top Twenty-Five Records
+subtitle: An annual list of my favorite releases
 permalink: /25
----
-
-# My Top Twenty-Five Records
-
-### An annual list of my favorite releases
-
 ---
 
 <!-- 2022 -->
