--- a/content/25.md
+++ b/content/25.md
@@ -5,7 +5,7 @@ subtitle: An annual list of my favorite releases
 permalink: /25
 ---
 
-Starting back in 2017, I began documenting my favorite records that came out each year. It started as a fun way keep track of what I've been spinning but morphed into serious business, a stage for friendly debate. Now, my tastes can be quite dad-rocker, but I try to throw some surprises in the mix.
+Starting back in 2017, I began documenting my favorite records that came out each year. It started as a fun way keep track of what I'd been spinning but morphed into serious business, a stage for friendly debate. Now, my tastes can be quite dad-rocker, but I try to throw some surprises in the mix. I'm not claiming these are the _best_ albums that came out each year, simply my _favorite_.
 
 Don't miss each year's mix featuring my favorite track from each release, and let's be honest, an excuse to create album art.
 
