Added 2023 List to 25

--- a/content/25.md
+++ b/content/25.md
@@ -11,6 +11,66 @@ Don't miss each year's mix featuring my favorite track from each release, and le
 
 ---
 
+<!-- 2023 -->
+
+## 2023
+
+1. [_Is It?_](https://open.spotify.com/album/11ROhDfHSfUYDlqdPbL5v8?si=1999b3381f47466f), Ben Howard
+
+2. [_ÁTTA_](https://open.spotify.com/album/4QHM0MaR2dPDWIaKhTt7hd?si=19c32d530ae94e93), Sigur Ròs
+
+3. [_The Record_](https://open.spotify.com/album/0e9GjrztzBw8oMC6n2CDeI?si=294d089921b54cfb), Boygenius
+
+4. [_Javelin_](https://open.spotify.com/album/2KqSL3vLfyVO7rrZJL9tUs?si=f0a58464030d4e1c), Sufjan Stevens
+
+5. [_In the End It Always Does_](https://open.spotify.com/album/1pflleeGIJGEAillSnSetf?si=6f48bfff75d34312), The Japanese House
+
+6. [_Appaloosa Bones_](https://open.spotify.com/album/4IVf6mYykPiEoqT099AXsX?si=dd40f639e1364b26), Gregory Alan Isakov
+
+7. [_Celebrants_](https://open.spotify.com/track/0fCis0169297twtJOSOAQs?si=2cb9a81b3598458a), Nickel Creek
+
+8. [_søn of dad_](https://open.spotify.com/album/1yoC2Wq50qymZj5HyF2z2A?si=4b3c18077b984350), Stephen Wilson Jr.
+
+9. [_Every Day Like the Last_](https://open.spotify.com/album/6C204NEUleEqcKH4igE8ZL?si=8423578856214371), Wye Oak
+
+10. [_Love Songs for Losers_](https://open.spotify.com/album/7n4sK9njoH3CxU6AwhQIvB?si=83cb63e7fce242ad), The Lone Bellow
+
+11. [_Weathervanes_](https://open.spotify.com/album/2gL0IM5SYhCxJebPaKdDkx?si=fba681f1e4f14690), Jason Isbell and the 400 Unit
+
+12. [_Time Will Wait For No One_](https://open.spotify.com/album/26sOnKsHrZqqo9agigUH4y?si=7de1c72f08884ba9), Local Natives
+
+13. [_Higher_](https://open.spotify.com/album/6kcZ35GY84A3FBIcIKVqTW?si=cfa43be4aa224dba), Chris Stapleton
+
+14. [_Jump for Joy_](https://open.spotify.com/album/7lYiPw3WutdJKdKdpPFD1s?si=343e178ab2884653), Hiss Golden Messenger
+
+15. [_Montclair (Live at the Wellmont Theater)_](https://open.spotify.com/album/5vmuul5vSPAwPnD50b4jPe?si=005f016d623f4ede), Pinegrove
+
+16. [_From The Valley_](https://open.spotify.com/album/7FghAqLEF3Qvjv91tcwKTc?si=8274dd4bb30a43d6), Ilsey
+
+17. [_A River Running to Your Heart_](https://open.spotify.com/album/2n4dZnB3Iz7wWPdDQO3auX?si=f574ca6e77584717), Fruit Bats
+
+18. [_First Two Pages of Frankenstein_](https://open.spotify.com/album/5Mc6uebYtKnRc5I7bjlNB6?si=50f8528ae60c4cac), The National
+
+19. [_Secret Stratosphere_](https://open.spotify.com/album/4AjwGFFfuVTAJuWjr8JOzM?si=937012cb4b0d4c15), William Tyler & The Impossible Truth
+
+20. [_Imaginary People_](https://open.spotify.com/album/6Kzw3VkXXYmCk3VSQBuQh8?si=f612c36cadb4430a), Viv & Riley
+
+21. [_Unreal Unearth_](https://open.spotify.com/album/3gF9KIynrJaC80HbVayPMx?si=f28bad2e12734ad0), Hozier
+
+22. [_End_](https://open.spotify.com/album/6iyqFDzMfdgCcrWq7PeCTb?si=d8dcae8acb464291), Explosions in the Sky
+
+23. [_Hadsel_](https://open.spotify.com/album/1jhgsccCbT1WXtmGUuZvIA?si=ae8ad2519aa04a61), Beirut
+
+24. [_My Entire Life_](https://open.spotify.com/album/0RlHHNuhYu4OAUMmo3gHzO?si=e8284c1b57344209), Susto
+
+25. [_Joy'All_](https://open.spotify.com/album/2TF6deaYHbiP5xepwFYbd1?si=adf7ee3ac2de480f), Jenny Lewis
+
+##### Here's my favorite track from each record:
+
+<a href="https://open.spotify.com/playlist/34DjTd5GHOVy1Yo6aEbuHy?si=5d9d9d006dc9449f" class="btn_secondary">Listen on Spotify ›</a>
+
+---
+
 <!-- 2022 -->
 
 ## 2022
