--- a/content/25.md
+++ b/content/25.md
@@ -1,7 +1,7 @@
 ---
 layout: secondary
 title: My Top Twenty-Five Records
-subtitle: An annual list of my favorite releases
+subtitle: Jeremy D. Cherry
 permalink: /25
 ---
 
