--- a/content/25.md
+++ b/content/25.md
@@ -11,6 +11,66 @@ Starting back in 2017, I began documenting my favorite records that came out eac
 
 ---
 
+<!-- 2024 -->
+
+## 2024
+
+1. [_Two Star & The Dream Police_](https://open.spotify.com/album/6DlLdXBGCsSDPOV8R2pCl7?si=99e2fe56dffe4d71), Mk.gee
+
+2. [_Keep Me on Your Mind/See You Free_](https://open.spotify.com/album/1Z22z4kTZuFWTMMA7K9N9B?si=6178ea26b67e4c13), Bonny Light Horseman
+
+3. [_Tigers Blood_](https://open.spotify.com/album/5O9TGAJ6Opoya7KCBKKQUA?si=0a482bc260bf4025), Waxahatchee
+
+4. [_Songs of A Lost World_](https://open.spotify.com/album/4wjxmqXnSQvBZWL3IbYngX?si=44a7ea3e48ab424b), The Cure
+
+5. [_First Light_](https://open.spotify.com/album/1Ey5eicbpQzd3nVP8kBYzu?si=fe4c83e861424632), Jónsi
+
+6. [_Revelator_](https://open.spotify.com/album/41vjTx4EVtMQnTFtGF1mk9?si=39eb56759b7d47af), Phosphorescent
+
+7. [_Charm_](https://open.spotify.com/album/1KNUCVXgIxKUGiuEB8eG0i?si=839848a4d68e4f12), Clairo
+
+8. [_Only God Was Above Us_](https://open.spotify.com/album/1W04wu2W4OIcuiNc5AMB3y?si=6d56b2af41ff4e69), Vampire Weekend
+
+9. [_SABLE,_](https://open.spotify.com/album/2Cwxsws0uZcu61gliYLOEm?si=6c49ef480cc94ce4), Bon Iver
+
+10. [_All Now_](https://open.spotify.com/album/3N3I408c25BJ3PjmLP5Itg?si=a3286b4721b74abd), The Staves
+
+11. [_Hovvdy_](https://open.spotify.com/album/1jEwzUBvIlVPeOfqR3Ghr0?si=4facea61b9b544b6), Hovvdy
+
+12. [_Five Dice, All Threes_](https://open.spotify.com/album/7fA59NGyyUumdoTH3HmWav?si=f3f29ee5b9294e92), Bright Eyes
+
+13. [_Revelation_](https://open.spotify.com/album/0db5o1FtmNXhIfxi3gXs51?si=715798d6152246eb), Leif Vollebekk
+
+14. [_Manning Fireworks_](https://open.spotify.com/album/1bKiiYGt1fzm9YMlTnUqpN?si=a1a541b6aa4b4725), MJ Lenderman
+
+15. [_Woodland_](https://open.spotify.com/album/7zZI8ki72x4CYVJ1H2JgUA?si=b57def8df18241f7), Gillian Welch, Dave Rawlings
+
+16. [_The Past Is Still Alive_](https://open.spotify.com/album/4Lwy5hFH1NTDb6kQZ5pTSy?si=2e382f357dda4e2a), Hurray For The Riff Raff
+
+17. [_Santa Cruz_](https://open.spotify.com/album/02AxKITp9gYzR5bmgq1tpR?si=83ff5fad28384884), Pedro the Lion
+
+18. [_Passage Du Desir_](https://open.spotify.com/album/71On7h3S7yH5D0Td6YNw1t?si=ca8823fc5565431d), Johnny Blue Skies
+
+19. [_Dulling the Horns_](https://open.spotify.com/album/5YUxzS2nBOqjbNITdnCitW?si=dbdfc5cd0b394902), Wild Pink
+
+20. [_Ooh La La_](https://open.spotify.com/album/1QyPLOYj8i5heNRnoYqRiX?si=0cc8c0a624f04b66), Guster
+
+21. [_Weird Faith_](https://open.spotify.com/album/40hflv8qjnNzLA2ZrFA3yv?si=c19ebe880d6d4e5e), Madi Diaz
+
+22. [_Don’t Forget Me_](https://open.spotify.com/album/3q149oaxOiW9EoHXqM5nvO?si=430fb9dd547942e9), Maggie Rogers
+
+23. [_Leon_](https://open.spotify.com/track/0ySkMC5CSdVFuBkiEDCQfF?si=c684f649f5b1486a), Leon Bridges
+
+24. [_My Method Actor_](https://open.spotify.com/album/4BBVZgRsWeNVgGmub6LY3p?si=de24078912fc4d38), Nilüfer Yanya
+
+25. [_Sonido Cósmico_](https://open.spotify.com/album/0FI8JaUH7kqtvM6EkmCm7t?si=4bdac4839ece4ba0), Hermanos Gutiérrez
+
+##### Here's my favorite track from each record:
+
+<a href="https://open.spotify.com/playlist/4Kn8EB7Rb0PQdG7v0D8MR5?si=d2982735cd82459b" class="btn_secondary">Listen on Spotify ›</a>
+
+---
+
 <!-- 2023 -->
 
 ## 2023
