--- a/content/404.md
+++ b/content/404.md
@@ -6,5 +6,5 @@ permalink: /404
 <div class="error">
 	<h1>404</h1>
 	<h2>Oops, this page doesn’t exist</h2>
-	<h5>Head back home for something a bit less existential</h5>
+	<h5>Head back <a href="/">home</a> for something a bit less existential</h5>
 </div>
